--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "name": "weather-app",
+  "version": "1.0.0",
+  "description": "A weather app built for the Odin Project",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Jeff Stanley",
+  "license": "ISC"
 }
